[package]
name = "kvs"
version = "0.1.0"
authors = ["WindSoilder <WindSoilder@outlook.com>"]
edition = "2018"
description = "A key-value storage engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.0"
serde = "1.0.100"
bincode = "1.1.4"
serde_json = "*"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
