[package]
name = "kvs"
version = "0.1.0"
authors = ["WindSoilder <WindSoilder@outlook.com>"]
edition = "2018"
description = "A key-value storage engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.0"
serde = {version="1.0.100", features=["derive"]}
bincode = "1.1.4"
serde_json = "*"
log = "*"
env_logger = "*"
sled = "*"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bin]]
name = "kvs-client"
path = "src/bin/kvs_client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs_server.rs"

[[bench]]
name = "my_benchmark"
path = "src/benches/my_benchmark.rs"
harness = false
